<?xml version="1.0"?>
<package format="2">
  <name>test_dartsim_in_catkin</name>
  <version>0.0.1</version>
  <description>
    This package tests dartsim in catkin
  </description>

  <maintainer email="grey@openrobotics.org">Grey</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dartsim</depend>

</package>
